[package]
name = "etcd"
version = "1.0.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
tonic = "0.12.3"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"